# AntiterrorSecurityProject

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
data/: README.md
include/filters/: filters.h
include/noise_borders/: noise_borders.h
include/preprocessing/RGB/: preprocessing.h
include/preprocessing/grayscale/: preprocessing.h
include/utils/: utils.h
src/: CMakeLists.txt  utils.cpp  utils.h  utils.hpp
src/detection/: README.md  detection.cpp  detection.hpp
src/filters/: README.md  filters.cpp  filters.hpp
src/noise_borders/: README.md  noise_borders.cpp  noise_borders.hpp
src/preprocessing/: README.md  preprocessing.cpp  preprocessing.hpp
src/preprocessing/RGB/: preprocessing.cpp  preprocessing.hpp
src/preprocessing/grayscale/: preprocessing.cpp  preprocessing.hpp
src/utils/: README.md  utils.cpp  utils.hpp
src/working_surface/: README.md  working_surface.cpp  working_surface.hpp
tests/: CMakeLists.txt
tests/detection/: test_detection.cpp
tests/filters/: test_filters.cpp
tests/noise_borders/: test_noise_borders.cpp
tests/utils/: test_utils.cpp
tests/working_surface/: test_working_surface.cpp
